# mapsforge-rs

./: Cargo.toml  README.md  file_tree.txt
examples/: read_header.rs  read_tile_indices.rs
exmples/: read_header.rs
src/: blocks.rs  error.rs  header.rs  lib.rs  poi.rs  tag.rs  tile.rs  types.rs  utils.rs  way.rs
test_data/: test_map.map
tests/: header_test.rs  test_utils.rs  tile_index_test.rs
